--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Macskak</title>
+    <title>Macskák</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
@@ -30,7 +30,7 @@
             </tr>
         <% }; %>
 </table>    
-    <a href="/cats/new"><h2>Uj macska létrehozása</h2></a>
+    <a href="/cats/new"><h2>Új macska létrehozása</h2></a>
   </div>
 </body>
 </html>
